[Append]矢量入库，坐标系，geometry，筛选属性